Scroll issue fixed for IE11 when ascending and stretched.

--- a/src/scss/content.scss
+++ b/src/scss/content.scss
@@ -209,6 +209,7 @@
 		flex-direction: column;
 
 		&:before {
+			display: flex;
 			flex: 1 1 auto;
 			content: '';
 		}
